--- a/NewsfeedComponent.html
+++ b/NewsfeedComponent.html
@@ -7,31 +7,64 @@
 </head>
 
 <body>
-<div class="card">
-  <div class="row profile">
-    <div class="headimg">
-      <img src="https://mms.businesswire.com/media/20190122005910/en/701785/5/Camila-x-MC.jpg" class="media-object circle">
-    </div>
-    <div class="headname">
-      <p>Neo Motto</p>
-    </div>
-    <div class="headpin">
-      <img src="../Assignments/iconfinder_jee-67_2180667.png">
+  <div class="row two-cards">
+    <div class="container">
+      <div class="noimg-card">
+        <div class="row profile">
+          <div class="headimg">
+            <img src="https://images.unsplash.com/photo-1533794318766-897f4d50cb39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" class="media-object circle">
+          </div>
+          <div class="headname">
+           <p class="top-title noimg"><b>thi.ng</b></p>
+            <p class="noimg">3 days ago . 23 mins read</p>
+          </div>
+          <div class="headpintop">
+            <img src="../Assignments/news__feed/iconfinder_Sed-05_2232331.png" height="40" width="40">
+          </div>
+        </div>
+        <div class="main-img">
+          <p class="title"><b>The Jacob's Ladder of coding</b></p>
+          <p class="pgeneral">Anecdotes and questions about climbing up and down the ladder of abstraction. Atari, ARM, demoscene, education, creative co...</p>
+        </div>
+        <div class="row like">
+          <div class="headimg">
+           <p> in <span class="links">Coder's Life</span></p>
+          </div>
+          <div class="headpinbottom">
+            <img src="https://image.flaticon.com/icons/svg/149/149217.svg" height="20" width="20"> <span>123</span>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="row profile">
+          <div class="headimg">
+            <img src="https://cdn.pixabay.com/photo/2015/11/28/20/21/wildlife-photographer-1067847_960_720.jpg" class="media-object circle">
+          </div>
+          <div class="headname">
+           <p class="top-title"><b>Christophe Tauziet</b></p>
+            <p>2 days . 9 mins read</p>
+          </div>
+          <div class="headpin">
+            <img src="../Assignments/news__feed/iconfinder_jee-67_2180667.png" height="40" width="40">
+          </div>
+        </div>
+        <div class="main-img">
+          <img src="../Assignments/news__feed/collage-unsplash.jpg" alt="collage" style="width:100%">
+          <p class="title"><b>Designing Facebook collage</b></p>
+          <p class="pgeneral">A journey in design & storytelling</p>
+        </div>
+        <div class="row like">
+          <div class="headimg">
+           <p> in <span class="links">Facebook Design</span></p>
+          </div>
+          <div class="headpinbottom">
+            <img src="https://image.flaticon.com/icons/svg/148/148836.svg" height="20" width="20"> <span>458</span>
+          </div>
+        </div>
+      </div>
+     
     </div>
   </div>
-  <img src="" alt="John" style="width:100%">
-  <h1>John Doe</h1>
-  <p class="title">CEO & Founder, Example</p>
-  <p>Harvard University</p>
-  <div style="margin: 24px 0;">
-    <a href="#"><i class="fa fa-dribbble"></i></a> 
-    <a href="#"><i class="fa fa-twitter"></i></a>  
-    <a href="#"><i class="fa fa-linkedin"></i></a>  
-    <a href="#"><i class="fa fa-facebook"></i></a> 
-  </div>
-  <p><button>Contact</button></p>
-</div>
-
 </body>
 
 </html>
