--- a/NewsfeedComponent.html
+++ b/NewsfeedComponent.html
@@ -19,7 +19,7 @@
             <p class="noimg">3 days ago . 23 mins read</p>
           </div>
           <div class="headpintop">
-            <img src="../news__feed/iconfinder_Sed-05_2232331.png" height="40" width="40">
+            <img src="./iconfinder_Sed-05_2232331.png" height="40" width="40">
           </div>
         </div>
         <div class="main-img">
@@ -45,11 +45,11 @@
             <p>2 days . 9 mins read</p>
           </div>
           <div class="headpin">
-            <img src="../news__feed/iconfinder_jee-67_2180667.png" height="40" width="40">
+            <img src="./iconfinder_jee-67_2180667.png" height="40" width="40">
           </div>
         </div>
         <div class="main-img">
-          <img src="../news__feed/collage-unsplash.jpg" alt="collage" style="width:100%">
+          <img src="./collage-unsplash.jpg" alt="collage" style="width:100%">
           <p class="title"><b>Designing Facebook collage</b></p>
           <p class="pgeneral">A journey in design & storytelling</p>
         </div>
